--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,13 @@
   <name>GBIF Common :: HBase Utils</name>
 
   <properties>
-    <hadoop-core.version>2.5.0-mr1-cdh5.2.0</hadoop-core.version>
-    <hadoop-non-core.version>2.5.0-cdh5.2.0</hadoop-non-core.version>
+    <hadoop.version>2.5.0-cdh5.2.0</hadoop.version>
     <hbase.version>0.98.6-cdh5.2.0</hbase.version>
     <hive.version>0.13.1-cdh5.2.0</hive.version>
     <oozie.version>4.0.0-cdh5.2.0</oozie.version>
     <zookeeper.version>3.4.5-cdh5.2.0</zookeeper.version>
 
     <junit.version>4.10</junit.version>
-    <mysql-connector.version>5.1.21</mysql-connector.version>
     <slf4j.version>1.7.2</slf4j.version>
   </properties>
 
@@ -88,6 +86,7 @@
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-testing-util</artifactId>
       <version>${hbase.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -96,20 +95,9 @@
       <version>${junit.version}</version>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql-connector.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>${hadoop-core.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
-      <version>${hadoop-non-core.version}</version>
+      <version>${hadoop.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -130,8 +118,7 @@
         <hive.metastore.uris>thrift://c1n8.gbif.org:9083</hive.metastore.uris>
 
         <!-- cluster version -->
-        <hadoop-core.version>2.5.0-mr1-cdh5.2.0</hadoop-core.version>
-        <hadoop-non-core.version>2.5.0-cdh5.2.0</hadoop-non-core.version>
+        <hadoop.version>2.5.0-cdh5.2.0</hadoop.version>
         <hbase.version>0.98.6-cdh5.2.0</hbase.version>
         <hive.version>0.13.1-cdh5.2.0</hive.version>
         <oozie.version>4.0.0-cdh5.2.0</oozie.version>
@@ -150,8 +137,7 @@
         <hive.metastore.uris>thrift://c1n1.gbif.org:9083</hive.metastore.uris>
 
         <!-- cluster version -->
-        <hadoop-core.version>2.5.0-mr1-cdh5.2.0</hadoop-core.version>
-        <hadoop-non-core.version>2.5.0-cdh5.2.0</hadoop-non-core.version>
+        <hadoop.version>2.5.0-cdh5.2.0</hadoop.version>
         <hbase.version>0.98.6-cdh5.2.0</hbase.version>
         <hive.version>0.13.1-cdh5.2.0</hive.version>
         <oozie.version>4.0.0-cdh5.2.0</oozie.version>
