--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>hbase-utils</artifactId>
-  <version>0.11</version>
+  <version>0.12-SNAPSHOT</version>
 
   <name>GBIF Common :: HBase Utils</name>
 
@@ -29,7 +29,7 @@
     <connection>scm:git:git@github.com:gbif/${project.artifactId}.git</connection>
     <url>https://github.com/gbif/${project.artifactId}</url>
     <developerConnection>scm:git:git@github.com:gbif/${project.artifactId}.git</developerConnection>
-    <tag>hbase-utils-0.11</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
