update to latest motherpom

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>24</version>
+    <version>37</version>
   </parent>
 
   <artifactId>hbase-utils</artifactId>
@@ -29,6 +29,13 @@
     <developerConnection>scm:git:git@github.com:gbif/${project.artifactId}.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+  
+  <distributionManagement>
+    <site>
+      <id>gh-pages</id>
+      <url>http://gbif.github.io/hbase-utils/</url>
+    </site>
+  </distributionManagement>
 
   <build>
     <resources>
