--- a/pom.xml
+++ b/pom.xml
@@ -4,23 +4,21 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>37</version>
+    <version>56</version>
   </parent>
 
   <artifactId>hbase-utils</artifactId>
-  <version>0.13-SNAPSHOT</version>
+  <version>0.13-hbase2-SNAPSHOT</version>
 
   <name>GBIF Common :: HBase Utils</name>
 
   <properties>
-    <jdkLevel>1.7</jdkLevel>
+    <hadoop.version>3.3.4</hadoop.version>
+    <hbase.version>2.5.2-hadoop3</hbase.version>
 
-    <hadoop.version>2.6.0-cdh5.4.10</hadoop.version>
-    <hbase.version>1.0.0-cdh5.4.10</hbase.version>
-
-    <junit.version>4.11</junit.version>
-    <slf4j.version>1.7.7</slf4j.version>
-    <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
+    <junit.version>4.13.1</junit.version>
+    <slf4j.version>1.7.25</slf4j.version>
+    <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
   </properties>
 
   <scm>
@@ -35,7 +33,26 @@
       <id>gh-pages</id>
       <url>http://gbif.github.io/hbase-utils/</url>
     </site>
+    <repository>
+      <id>gbif-release</id>
+      <url>https://repository.gbif.org/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>gbif-snapshot</id>
+      <url>https://repository.gbif.org/content/repositories/snapshots</url>
+    </snapshotRepository>
   </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>gbif-all</id>
+      <url>https://repository.gbif.org/content/groups/gbif</url>
+    </repository>
+    <repository>
+      <id>gbif-thirdparty</id>
+      <url>https://repository.gbif.org/content/repositories/thirdparty/</url>
+    </repository>
+  </repositories>
 
   <build>
     <resources>
@@ -77,28 +94,6 @@
       </plugin>
     </plugins>
   </build>
-
-  <repositories>
-    <repository>
-      <id>gbif-thirdparty</id>
-      <url>http://repository.gbif.org/content/repositories/thirdparty</url>
-    </repository>
-    <repository>
-      <id>gbif-all</id>
-      <url>http://repository.gbif.org/content/groups/gbif</url>
-    </repository>
-    <repository>
-      <id>cloudera</id>
-      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-  </repositories>
 
   <dependencies>
     <dependency>
@@ -142,25 +137,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase-testing-util</artifactId>
-      <version>${hbase.version}</version>
-      <scope>test</scope>
-      <!-- The following are to exclude MR1 artifacts -->
-      <exclusions>
-        <!-- ignore MR1 artifacts -->
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-core</artifactId>
-        </exclusion>
-        <!-- ignore MR1 artifacts -->
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-minicluster</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -181,11 +157,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
