--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
   <name>GBIF Common :: HBase Utils</name>
 
   <properties>
-    <hadoop.version>3.3.4</hadoop.version>
-    <hbase.version>2.5.2-hadoop3</hbase.version>
+    <hadoop.version>3.3.0</hadoop.version>
+    <hbase.version>2.4.12</hbase.version>
 
     <junit.version>4.13.1</junit.version>
     <slf4j.version>1.7.25</slf4j.version>
