--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>hbase-utils</artifactId>
-  <version>0.14-SNAPSHOT</version>
+  <version>0.14-H3-SNAPSHOT</version>
 
   <name>GBIF Common :: HBase Utils</name>
 
