--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <hadoop.version>3.3.4</hadoop.version>
-    <hbase.version>2.4.12</hbase.version>
+    <hbase.version>2.5.3-hadoop3</hbase.version>
 
     <junit.version>4.13.1</junit.version>
     <slf4j.version>1.7.25</slf4j.version>
